<resources>
    <string name="app_name">Movie Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_movie">Register Movie</string>
    <string name="display_movie">Display Movie</string>
    <string name="favorites">Favorites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search_and_ratings">Search and Ratings</string>
    <string name="cover">COVER</string>
    <string name="movie_application">My Movies</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="register_product">Register Movie</string>
    <string name="name">Name</string>
    <string name="enter_movie_name">Enter Movie Name</string>
    <string name="enter_movie_released_year">Enter Movie Released Year</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="enter_movie_director">Enter Movie Director</string>
    <string name="actresses">Actresses</string>
    <string name="enter_actress_names">Enter Actress Names</string>
    <string name="ratings">Ratings</string>
    <string name="enter_movie_rating">Enter Movie Rating</string>
    <string name="description">Description</string>
    <string name="enter_movie_description">Enter Movie Description</string>
    <string name="register">Register</string>
    <string name="movies">Movies</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="save">Save</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="update">update</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="search">Search</string>
    <string name="enter_movie_title_director_or_actress">Enter Movie Title, Director or Actress</string>
    <string name="ratingsBtn">Ratings</string>
    <string name="update_movie">Update Movie</string>
    <string name="imdb_ratings">IMDB ratings</string>
    <string name="display_movies">Display Movies</string>
    <string name="reister_ins">Clicking the register button you will give Text fields with there tags. You should enter your movie data to register in database. You must enter movie year greater than 1895 and ratings should be between 10.</string>
    <string name="display_ins">Inside display movies screen you will get all the movies you added and you can simply select a movie by checking checkbox to corresponding movie and need to click add to favourite button.</string>
    <string name="favourite_ins">\"In this screen you will get all the favourite movies you added. Simply you can un select the checkbox and remove from favourite list. \"</string>
    <string name="edit_ins">Inside edit movies button you will get all the movies you have added to database and you can select the movie what you need to edit. When clicked the movie it will redirect to another page with Text Fields.</string>
    <string name="search_ins">In Search button you will get Text field and button. you can search a movie by movie title, director and cast(actrsses) in movie</string>
    <string name="ratings_ins">In this screen you will connect to IMDB database. First you will get all the movies you have added to db. Then you can select the movie and get IMDB ratings from IMDB api</string>

</resources>