<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232121"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/movie_application"
                android:textSize="24sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/cover"
                app:srcCompat="@drawable/cover" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerMovieBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="regMovie"
                android:text="@string/register_movie" />

            <Button
                android:id="@+id/displayMovieBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayMovieScreen"
                android:text="@string/display_movie" />

            <Button
                android:id="@+id/favoritesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="favoritesScreen"
                android:text="@string/favorites" />

            <Button
                android:id="@+id/editMoviesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editMovieScreen"
                android:text="@string/edit_movies" />

            <Button
                android:id="@+id/searchAndRatingsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="searchRateScreen"
                android:text="@string/search" />

            <Button
                android:id="@+id/ratingsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rateScreen"
                android:text="@string/ratingsBtn" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="searchRateScreen"
                    android:text="@string/instructions" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>