<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterMovieActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_movie"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/nameTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateNameTxtInput"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_movie_name"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/yearTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/year"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateYearTxtInput"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_movie_released_year"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/directorTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/director"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateDirectorTxtInput"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_movie_director"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/actressTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/actresses"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateActressTxtInput"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_actress_names"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ratingsTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/ratings"
                    android:textSize="18sp" />

                <RatingBar
                    android:id="@+id/RatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:isIndicator="false"
                    android:numStars="10"
                    android:rating="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/descriptionTxtView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="start"
                    android:text="@string/description"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateDescriptionTxtInput"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_movie_description"
                    android:inputType="textMultiLine" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/updateRegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>